# mqfs-satellite-crop-derivatives

./: README.md
mqfs-satellite-crop-derivatives 2/: CITATION.cff  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
mqfs-satellite-crop-derivatives 2/c_core/: Makefile  cli_demo.c  ou_mc.c  ou_mc.h
mqfs-satellite-crop-derivatives 2/config/: config.yaml
mqfs-satellite-crop-derivatives 2/cpp/: CMakeLists.txt  bindings.cpp  capi.cpp  cli.cpp  mqfs_pricer.hpp
mqfs-satellite-crop-derivatives 2/matlab/: burn_analysis.m  calibrate_ou.m  plot_results.m  price_parametric.m
mqfs-satellite-crop-derivatives 2/paper/: mqfs_wp_satellite_crop.tex
mqfs-satellite-crop-derivatives 2/scripts/: run_pipeline.py
mqfs-satellite-crop-derivatives 2/src/: __init__.py
mqfs-satellite-crop-derivatives 2/src/bindings/: __init__.py  _native.py  c_pricer_wrapper.py  cpp_pricer_wrapper.py
mqfs-satellite-crop-derivatives 2/src/oracle/: __init__.py  gee_ingestion.py  indices.py  sentinel_processor.py  synthetic.py
mqfs-satellite-crop-derivatives 2/src/pricing_engine/: __init__.py  monte_carlo.py  ou_calibration.py  payoff.py  pricer.py
mqfs-satellite-crop-derivatives 2/src/quant_layer/: __init__.py  anomaly_detection.py  feature_engineering.py  volatility_matrix.py
mqfs-satellite-crop-derivatives 2/tests/: conftest.py  test_anomaly.py  test_indices.py  test_pricing.py
